[package]
name = "pit-tracker"
version = "2.0.0"
authors = ["Joseph Zurowski <12567900+Dunklheit@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.3"
humantime = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serenity = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
